# tk2_vision

./: .gitignore  README.md  deletesim.txt  sample.sr
buildimg/: test.xml
src/arm_target_finder/: CMakeLists.txt  package.xml
src/arm_target_finder/include/arm_target_finder/: ForegroundDetector.h  ObjectInfo.h  SparseRecognition.h
src/arm_target_finder/msg/: TargetFound.msg
src/arm_target_finder/script/: take_photo.py
src/arm_target_finder/src/: ForegroundDetector.cpp  ModelBuild.cpp  ObjectClassify.cpp  SparseRecognition.cpp  TargetFinder.cpp  collectsample.cpp  takephoto.cpp  tinyxml2.cpp  zhuangbi.cpp
src/kinect_interesting_points/: CMakeLists.txt  package.xml
src/kinect_interesting_points/include/pcl_rebuild/: ClusterDivider.h  ColorChecker.h  ColorFixer.h  IKinectFilter.h  KinectParameters.h  PointCloudBuilder.h  PointCloudUtilities.h  Protonect.h
src/kinect_interesting_points/script/: kinect_arm_adapter.py
src/kinect_interesting_points/src/: ClusterDivider.cpp  ColorChecker.cpp  ColorFixer.cpp  EntropyFilter.cpp  ImageRebuild.cpp  KinectParameters.cpp  LineFilter.cpp  PointCloudBuilder.cpp  Protonect.cpp  kinect_interesting_points_client.cpp  kinect_interesting_points_server.cpp
src/kinect_interesting_points/srv/: InterestingPoints.srv
src/kinect_people_detection/: CMakeLists.txt  package.xml
src/kinect_people_detection/include/pcl_rebuild/: people_detection.h
src/kinect_people_detection/src/: kinect_people_detection_client.cpp  kinect_people_detection_node.cpp  kinect_people_detection_server.cpp  people_detection.cpp
src/pcl_rebuild/: CMakeLists.txt  package.xml
src/pcl_rebuild/include/pcl_rebuild/: ClusterDivider.h  ColorChecker.h  EntropyFilter.h  IPointCloudDivider.h  ImageRebuild.h  LineFilter.h
src/pcl_rebuild/src/: ClusterDivider.cpp  ColorChecker.cpp  ColorFixer.cpp  EntropyFilter.cpp  ImageRebuild.cpp  LineFilter.cpp  PointCloudUtilities.cpp  main.cpp
src/tinker_object_recognition/: CMakeLists.txt  package.xml
src/tinker_object_recognition/include/tinker_object_recognition/: common.h  utilities.h
src/tinker_object_recognition/launch/: tinker_bow_run.launch  tinker_bow_train.launch
src/tinker_object_recognition/node/: CollectSample.cpp  bow_classify_node.cpp  bow_train_node.cpp  tinker_pointcloud_recognition_node.cpp
src/tinker_object_recognition/param/: image_info.yaml
src/tinker_object_recognition/script/: com_arm_cam.py
src/tinker_object_recognition/src/: tinyxml2.cpp  utilities.cpp
testpicture/: 1.txt  sample.sr  test.xml
testpicture/object_rec/: CMakeLists.txt  ModelBuild.cpp  ObjectClassify.cpp  SparseRecognition.cc
tinker_camera/: CMakeLists.txt  package.xml
tinker_camera/include/tinker_camera/: pointcloud_builder.h
tinker_camera/launch/: calibration.launch  hand_camera.launch  tk_back_xtion.launch  tk_chass_rgbd.launch  tk_front_primesense.launch
tinker_camera/launch/include/: depth.launch.xml  depth_registered.launch.xml  rgbd_processing.launch.xml
tinker_camera/launch/includes/: openni2.launch.xml
tinker_camera/node/: point2scan.cpp
tinker_camera/param/: ost.yaml
tinker_camera/script/: com_arm_cam.py
tinker_camera/src/: pointcloud_builder.cpp
tinker_depth_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
tinker_depth_image_proc/src/filters/: filters.cpp
tinker_depth_image_proc/src/nodelets/: depth_outlier_removal.cpp
tinker_human_identify/: CMakeLists.txt  package.xml  requirements.txt
tinker_human_identify/launch/: human_identify.launch
tinker_human_identify/src/: apikeys.py  oxfordface.py  tinker_human_identify.py
tinker_human_recognition/: CMakeLists.txt  package.xml
tinker_human_recognition/include/tinker_human_recognition/cmt_track/: CMT.h  Consensus.h  Fusion.h  Matcher.h  Tracker.h  common.h  fastcluster.h
tinker_human_recognition/launch/: tinker_cmt_track.launch
tinker_human_recognition/node/: cmt_track_node.cpp
tinker_human_recognition/param/: CMT_track_params.yaml
tinker_human_recognition/script/: generate_person_info.py
tinker_human_recognition/src/cmt_track/: CMT.cpp  Consensus.cpp  Fusion.cpp  Matcher.cpp  Tracker.cpp  common.cpp  fastcluster.cpp
tinker_object_detection/: CMakeLists.txt  package.xml
tinker_object_detection/scripts/classification/: classification.py  utils.py  vgg16.py
tinker_object_detection/scripts/cloudproc/: cloudproc.py  projection.py  shelf.py  table.py
tinker_object_recognition/: CMakeLists.txt  image_info_new.yam  package.xml
tinker_object_recognition/include/: image_info_new.yaml
tinker_object_recognition/include/tinker_object_recognition/: common.h  utilities.h
tinker_object_recognition/launch/: kinect_collector_run.launch  tinker_bow_aclib_run.launch  tinker_bow_run.launch  tinker_bow_service_run.launch  tinker_bow_train.launch  tinker_collector_run.launch  tinker_object_recognition.launch  tinker_vision_all.launch
tinker_object_recognition/node/: CollectSample.cpp  bow_classify_aclib_node.cpp  bow_classify_node.cpp  bow_classify_service_node.cpp  collect_sample_node.cpp  kinect_collect_sample_node.cpp
tinker_object_recognition/param/: .gitignore  fd_param.yaml  frame_acceptance.yaml  image_info.yaml  image_info_new.yaml
tinker_object_recognition/scripts/: test_bowclient.py
tinker_object_recognition/src/: utilities.cpp
tinker_object_recognition/src/arm_target_finder/: ForegroundDetector.cpp
tinker_object_recognition/src/graph_filter/: ColorFixer.cpp  filters.cpp
tinker_object_recognition/src/graph_recognition/: bow_classification.cpp  bow_data.cpp
tinker_object_recognition/src/pointcloud_rebuild/: pointcloud_builder.cpp
tinker_object_recognition/src/pointcloud_recognition/: ClusterDivider.cpp  pointcloud_object_finder.cpp
tinker_object_recognition/srv/: FindObjects.srv
tinker_vision_msgs/: CMakeLists.txt  package.xml
tinker_vision_msgs/action/: Empty.action  Object.action
tinker_vision_msgs/msg/: TrackPeople.msg  TrackPerson.msg
tinker_vision_msgs/scripts/: test_bowclient.py
tinker_vision_msgs/srv/: FindOperator.srv  ObjectClassify.srv
(+63 files in other folders)
